--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -3,7 +3,7 @@ name: deploy-container
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - "packages/container/**"
 
@@ -13,7 +13,7 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v2
