--- a/.github/container/workflow.yaml
+++ b/.github/container/workflow.yaml
@@ -1,11 +1,11 @@
 name: deploy-container
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - "packages/container/**"
+on: [push]
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - "packages/container/**"
 
 defaults:
   run:
